# gb-rl

./: .gitignore  README.md  best_run.json  challenge.py  load.py  pyproject.toml  random_actions.py  record.py  train.py
challenge/: __init__.py  controller.py
envs/: callback.py  mario_deluxe.py
state/: level1-1.state  luigi-level1-1.state
