[project]
name = "gb-rl"
version = "0.1.0"
description = "Super Mario Deluxe - Reinforcement Learning."
readme = "README.md"
authors = ["Jakob Klotz <jakob.klotz@mci.edu>"]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pyboy>=2.4.1",
    "rich>=13.9.4",
    "shimmy>=1.3.0",
    "stable-baselines3>=2.3.2",
    "tqdm>=4.67.0",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",
    "W",
    "I",
    "N",
    "F",
    "B",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
]
lint.unfixable = ["E501"]
